--- a/data_folder/plain_text_resume.yaml
+++ b/data_folder/plain_text_resume.yaml
@@ -1,106 +1,114 @@
 personal_information:
-  name: "[Your Name]"
+  name: "El Mehdi FIHR"
   surname: "[Your Surname]"
-  date_of_birth: "[Your Date of Birth]"
-  country: "[Your Country]"
-  city: "[Your City]"
-  address: "[Your Address]"
-  zip_code: "[Your zip code]"
-  phone_prefix: "[Your Phone Prefix]"
-  phone: "[Your Phone Number]"
-  email: "[Your Email Address]"
-  github: "[Your GitHub Profile URL]"
-  linkedin: "[Your LinkedIn Profile URL]"
+  country: "Canada"
+  city: "Edmonton"
+  address: "44-1530 TAMARACK BLVD NW EDMONTON AB"
+  zip_code: "T6T 2E6"
+  phone: "514-570-2691"
+  email: "fihr.mehdi@gmail.com"
+  linkedin: "https://www.linkedin.com/in/elmehdifihr/"
 
 education_details:
-  - education_level: "[Your Education Level]"
-    institution: "[Your Institution]"
-    field_of_study: "[Your Field of Study]"
+  - education_level: "Bachelor"
+    institution: "Faculty of Science and Technology"
+    field_of_study: "Computer science and industrial management"
     final_evaluation_grade: "[Your Final Evaluation Grade]"
-    start_date: "[Start Date]"
-    year_of_completion: "[Year of Completion]"
-    exam:
-      exam_name_1: "[Grade]"
-      exam_name_2: "[Grade]"
-      exam_name_3: "[Grade]"
-      exam_name_4: "[Grade]"
-      exam_name_5: "[Grade]"
-      exam_name_6: "[Grade]"
+    start_date: "2012"
+    year_of_completion: "2013"
 
 experience_details:
-  - position: "[Your Position]"
-    company: "[Company Name]"
-    employment_period: "[Employment Period]"
-    location: "[Location]"
-    industry: "[Industry]"
+  - position: "IT System Administrator"
+    company: "Starpax Biopharma"
+    employment_period: "July 2023 – Jan 2025"
+    location: "Saint-Laurent - Montréal, Québec"
     key_responsibilities:
-      - responsibility_1: "[Responsibility Description]"
-      - responsibility_2: "[Responsibility Description]"
-      - responsibility_3: "[Responsibility Description]"
-    skills_acquired:
-      - "[Skill]"
-      - "[Skill]"
-      - "[Skill]"
-
-  - position: "[Your Position]"
-    company: "[Company Name]"
-    employment_period: "[Employment Period]"
-    location: "[Location]"
-    industry: "[Industry]"
+      - responsibility_1: "IT asset management"
+      - responsibility_2: "Reduction and implementation of IT ticketing management processes"
+      - responsibility_3: "Implementation of ticketing service for the purpose of creating an ITSM system under ITIL standards"
+      - responsibility_3: "Active Directory administration of users/groups and GPOs under server 2016"
+      - responsibility_3: "Implementation of Openlab server/client project (infrastructure, database, user/group/role management and Openlab Backup management HPLC)"
+      - responsibility_3: "Administration of ACLs and client VPNs in a FortiGate environment"
+      - responsibility_3: "Administration of HP switch computer network equipment and Fortinet Access Point"
+      - responsibility_3: "Management of audiovisual equipment"
+      - responsibility_3: "Management of corporate telephone lines - TELUS business Connect"
+      - responsibility_3: "Level 2 management of IT incidents and problems"
+      - responsibility_3: "Level 2 management of IT security incidents"
+      - responsibility_3: "Reduction, update and implementation of IT processes and procedures"
+      - responsibility_3: "Administration of Office 365 users/groups and Microsoft Teams"
+      - responsibility_3: "Management of conditional access on Microsoft Azure 365"
+      - responsibility_3: "Externalized SharePoint o365 backup administrator"
+      - responsibility_3: "Maintenance of IT equipment (office equipment, servers, and network equipment"
+ 
+ - position: "IT Manager"
+    company: "Vinci Construction Grands Projets"
+    employment_period: "March 2018 - Jan. 2023"
+    location: "Agadir, Morocco"
     key_responsibilities:
-      - responsibility_1: "[Responsibility Description]"
-      - responsibility_2: "[Responsibility Description]"
-      - responsibility_3: "[Responsibility Description]"
-    skills_acquired:
-      - "[Skill]"
-      - "[Skill]"
-      - "[Skill]"
-
-projects:
-  - name: "[Project Name]"
-    description: "[Project Description]"
-    link: "[Project Link]"
-
-  - name: "[Project Name]"
-    description: "[Project Description]"
-    link: "[Project Link]"
-
-achievements:
-  - name: "[Achievement Name]"
-    description: "[Achievement Description]"
-  - name: "[Achievement Name]"
-    description: "[Achievement Description]"
-
+      - responsibility_1: "Implementation and Administrator of enterprise infrastructure and business servers"
+      - responsibility_2: "o365 Administrator (User/group and license management, o365 Security, conditional access)"
+      - responsibility_3: "Administration of SharePoint 365"
+      - responsibility_3: "Reduction, update and implementation of IT processes and procedures"
+      - responsibility_3: "Implementation of ITSM system under ITIL standards (Management of service requests,knowledge, IT assets, incidents, problems and changes)"
+      - responsibility_3: "IT asset management with GLPI"
+      - responsibility_3: "HP Aruba IT network equipment administration and Ubiquiti Access Point"
+      - responsibility_3: "Implementation of radiocommunication system"
+      - responsibility_3: "Implementation of video surveillance solutions for a 15km construction site"
+      - responsibility_3: "Project manager for the implementation of IS solutions"
+      - responsibility_3: "Organization and budget monitoring"
+      - responsibility_3: "Represent the company with internal partners and external service providers"     
+      
+ - position: "[Computer Network Administrator]"
+    company: "Territorial Surveillance Direction"
+    employment_period: "June. 2014 - Aug 2017"
+    location: "Rabat, Morocco]"
+    key_responsibilities:
+      - responsibility_1: "Project manager for the implementation of a Domino Lotus 8.5.3 Messaging solution"
+      - responsibility_2: "Physical installation of the centralized office data storage solution (EMC² SAN solution)."
+      - responsibility_3: "CISCO Call Manager server implementation"
+      - responsibility_3: "Platform preparation and installation of ESXi 5.1."
+      - responsibility_3: "Advanced installation, configuration, and administration of server 2012"
+      
+ - position: "IT Technical Team Lead."
+    company: "Amexs"
+    employment_period: "June 2013 - June 2014"
+    location: "Casablanca, Morocco"
+    key_responsibilities:
+      - responsibility_1: "Service provider at the head office of Attijariwafa Bank"
+      - responsibility_2: "Server administration 2003"
+      - responsibility_3: "Responsible for the server maintenance team"
+      
+ - position: "Technician specializing in computer networks and systems"
+    company: "Amexs"
+    employment_period: "March 2013 - June 2013"
+    location: "Rabat, Morocco"
+    key_responsibilities:
+      - responsibility_1: "Service provider at Maroc Telecom."
+      - responsibility_2: "Software maintenance of IT equipment"
+      - responsibility_3: "Preventive maintenance of network equipment"
+     
 certifications:
-  - name: "[Certification Name]"
-    description: "[Certification Description]"
-  - name: "[Certification Name]"
-    description: "[Certification Description]"
+  - name: "Microsoft Certificat Solutions Expert: Cloud Platform and Infrastructure"
+  - name: "CISCO Certificat Network Associate"
+  - name: "Microsoft Certified Solutions Expert: Windows Server 2012"
+  - name: "Microsoft Certified Solutions Associate: Windows Server 2012"
+  - name: "Microsoft Certified Professional MCP"
 
 languages:
-  - language: "[Language]"
-    proficiency: "[Proficiency Level]"
-  - language: "[Language]"
-    proficiency: "[Proficiency Level]"
-
-interests:
-  - "[Interest]"
-  - "[Interest]"
-  - "[Interest]"
+  - language: "English"
+    proficiency: "Advanced"
+  - language: "French"
+    proficiency: "Native"
 
 availability:
-  notice_period: "[Notice Period]"
-
-salary_expectations:
-  salary_range_usd: "[Salary Range]"
+  notice_period: "1 week"
 
 self_identification:
-  gender: "[Gender]"
-  pronouns: "[Pronouns]"
-  veteran: "[Yes/No]"
-  disability: "[Yes/No]"
+  gender: "Male"
+  pronouns: "he"
+  veteran: "No"
+  disability: "No"
   ethnicity: "[Ethnicity]"
-
 
 legal_authorization:
   eu_work_authorization: "[Yes/No]"
@@ -111,20 +119,19 @@ legal_authorization:
   legally_allowed_to_work_in_eu: "[Yes/No]"
   legally_allowed_to_work_in_us: "[Yes/No]"
   requires_eu_sponsorship: "[Yes/No]"
-  canada_work_authorization: "[Yes/No]"
-  requires_canada_visa: "[Yes/No]"
-  legally_allowed_to_work_in_canada: "[Yes/No]"
-  requires_canada_sponsorship: "[Yes/No]"
+  canada_work_authorization: "No"
+  requires_canada_visa: "No"
+  legally_allowed_to_work_in_canada: "Yes"
+  requires_canada_sponsorship: "No"
   uk_work_authorization: "[Yes/No]"
   requires_uk_visa: "[Yes/No]"
   legally_allowed_to_work_in_uk: "[Yes/No]"
   requires_uk_sponsorship: "[Yes/No]"
 
-
 work_preferences:
-  remote_work: "[Yes/No]"
-  in_person_work: "[Yes/No]"
-  open_to_relocation: "[Yes/No]"
-  willing_to_complete_assessments: "[Yes/No]"
-  willing_to_undergo_drug_tests: "[Yes/No]"
-  willing_to_undergo_background_checks: "[Yes/No]"
+  remote_work: "Yes"
+  in_person_work: "Yes"
+  open_to_relocation: "Yes"
+  willing_to_complete_assessments: "Yes"
+  willing_to_undergo_drug_tests: "Yes"
+  willing_to_undergo_background_checks: "Yes"
