--- a/data_folder/work_preferences.yaml
+++ b/data_folder/work_preferences.yaml
@@ -12,7 +12,7 @@ experience_level:
 
 job_types:
   full_time: true
-  contract: false
+  contract: true
   part_time: false
   temporary: true
   internship: false
@@ -20,20 +20,20 @@ job_types:
   volunteer: true
 
 date:
-  all_time: false
-  month: false
-  week: false
+  all_time: true
+  month: true
+  week: true
   24_hours: true
 
 positions:
-  - Software engineer
+  - IT Administrator
 
 locations:
-  - Germany
+  - Edmonton ,Alberta , Canada
 
 apply_once_at_company: true
 
-distance: 100
+distance: 50
 
 company_blacklist:
   - wayfair
